update index file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <login-foo></login-foo>
 
-  <script type="module" src="./out-tsc/src/login-foo.js"></script>
+  <script type="module" src="./dist/src/login-foo.js"></script>
 </body>
 
 </html>
